testsuite/tests/backpack/should_compile/bkp17.bkp
unit p where
    signature H where
unit q where
    module M where
unit r where
    dependency p[H=q:M]
