testsuite/tests/backpack/should_fail/bkpfail19.bkp
unit p where
    signature ShouldFail(newSTRef) where
        import Data.STRef.Lazy(newSTRef)
unit q where
    dependency p[ShouldFail=base:Data.STRef]
